ops/backend/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: brain-frontend-vs
  namespace: brain-app
spec:
  hosts:
    - brain.kushan23.com
  gateways:
    - default/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1
      route:
        - destination:
            host: backend
            port:
              number: 80
